# Eda-streamlit-pandas-profiling

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
assets/: README.md
tests/: test_pandas_profiling_using_streamlit.py
